<resources>
    <string name="app_name">RSS_ATOM_news_aggregator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="channel_name_hint">Name of channel</string>
    <string name="channel_link_hint">Link</string>
    <string name="add">Add</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_add_title">New channel:</string>
    <string name="error_dialog_link_valid">Not valid link</string>
    <string name="error_dialog_empty">Enter channel name and link</string>
    <string name="error_dialog_link_unsup">Unsupported link</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="error_no_internet">Internet connection lost</string>
    <string name="dialog_edit_title">Edit channel:</string>
    <string name="settings_title">Settings</string>
    <string name="settings_period">News refresh time:</string>
    <string name="settings_lang">Language:</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Russian</item>
    </string-array>
</resources>
