<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialod_add_channel_shape">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:background="@color/colorPrimary"
        style="@style/dialog_settings"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/period_textView"
            style="@style/dialog_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_period" />

        <TextView
            android:id="@+id/seekBar_textView"
            style="@style/dialog_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/period_seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="60"
        android:progress="15" />

    <TextView
        android:id="@+id/lang_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_lang"
        style="@style/dialog_settings"/>

    <Spinner
        android:id="@+id/lang_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/dialog_settings"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/button_apply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/apply"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
</LinearLayout>