<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialod_add_channel_shape">

    <TextView
        android:id="@+id/textView"
        style="@style/DialogAddChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10sp"
        android:text="@string/dialog_add_title"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <EditText
        android:id="@+id/channel_name_text"
        style="@style/DialogAddChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/channel_name_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/textView"/>

    <EditText
        android:id="@+id/channel_link_text"
        style="@style/DialogAddChannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/channel_link_hint"
        android:inputType="textUri"
        app:layout_constraintTop_toBottomOf="@id/channel_name_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/channel_link_text"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/button_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@id/channel_link_text" />

        <Button
            android:id="@+id/button_ok"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            app:layout_constraintTop_toBottomOf="@id/channel_link_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

